--- a/index.html
+++ b/index.html
@@ -7,25 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> revisao </h1>
-    <p>calcular media de 4 notas</p>
+    <p>Boa tarde</p>
     <script>
-    var nota1 = 6
-    var nota2 = 7
-    var nota3 = 8.5
-    var nota4 = 9
+       var i;
+       for(i = 0;i < 70; i++){
+           document.write(+i+"<br>")
+       }
 
-    var soma = nota1 + nota2 + nota3 + nota4
-    var media = soma / 4; 
-    alert (soma.toFixed(2))
-    alert(media.toFixed(2))
 
-    if(media <6){
-    alert("reprovado") 
-
-    } else{
-    alert("aprovado")
-    }
 
     </script>
 </body>
