--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Boa tarde</p>
+    <p>Duvido vc ver tudo isso</p>
     <script>
        var i;
-       for(i = 0;i < 70; i++){
-           document.write(+i+"<br>")
-       }
+      for(i = 0; i < 10; i++){
+        document.write("Bm dia.<br>")
+
+      }
 
 
 
