--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <p>Duvido vc ver tudo isso</p>
     <script>
-       var i;
-      for(i = 0; i < 10; i++){
-        document.write("Bm dia.<br>")
+       var contador;
+      for(contador = 100; contador >  0; contador--){
+        document.write(contador+"<br>")
 
       }
 
