--- a/exoo.html
+++ b/exoo.html
@@ -9,11 +9,18 @@
 <body>
     <p>Mas Bah Fi, que calor </p>
     <script>
-       var i = 10
+       var i = 1;
 
-       for(i; i <= 20; i++){
-            document.write(i+" - ")
+       for(i; i <= 3 ; i++){
+          var nome = prompt("digite o nome do aluno.")
+          var idade = parseInt(prompt("digite a idade do aluno."))
+          var nota1 = parseFloat(prompt("digite uma nota"))
+          var nota2 = parseFloat(prompt("digite a segunda nota."))
+          var soma = nota1 = nota2; 
 
+          document.write("aluno "+nome+"<br>")
+          document.write("idade: "+idade+"<br>")
+          document.write("soma das notas: "+soma+"<br>")
 
        }
 
