--- a/index.html
+++ b/index.html
@@ -2,21 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <p>Duvido vc ver tudo isso</p>
-    <script>
-       var contador;
-      for(contador = 100; contador >  0; contador--){
-        document.write(contador+"<br>")
+    <p>Mas Bah tche</p>
+ <script>
+   const mes = [" Janeiro, Fevereiro, Março, Abril"]
+   const estações = [" Verão, Primavera, Outono, Inverno"]
+   const aviso = ["voce esta entrando no index" ]
 
-      }
+   document.write("Início os anos:" +mes)
+   document.write("<br>")
+   document.write("Estações do ano:" +estações)
+   document.write("<br>")
+   alert(aviso)
+   alert(aviso(2))
+
+ </script>   
 
 
 
-    </script>
 </body>
 </html>
