--- a/revisao.html
+++ b/revisao.html
@@ -9,9 +9,9 @@
 <body>
     <p>Revisao 01</p>
     <script>
-     let num1 = 8
-     let num2 = 6
-     let num3 = 5
+     let num1 =parseFloat(prompt("digite o numero"))
+     let num2 =parseFloat(prompt("digite o numero"))
+     let num3 =parseFloat(prompt("digite o numero"))
      
       let soma = num1 + num2 + num3
       let div = soma / 3 
@@ -19,8 +19,8 @@
      alert(div.toFixed(2))
      console.log(soma)
      console.log(div.toFixed(2))
-     document.write("Soma dos numeros: "+soma+"<br>")
-     document.write("divisao dos numeros: "+div.toFixed(2))
+     document.write("Soma dos números: "+soma+"<br>")
+     document.write("Divisao dos números: "+div.toFixed(2))
     </script>
 </body>
 </html>
